apps/base/openwebui/public.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-public
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [webui.harville.dev]
  rules:
    - host: webui.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 80
